--- a/html-css-intro/jan2021/class.html
+++ b/html-css-intro/jan2021/class.html
@@ -1048,7 +1048,7 @@ font-family: "Arial", sans-serif; /* Comma-separated list */
         <div class="copyright">
           Intro to HTML & CSS -- Girl Develop It --
           <!-- Intro to HTML & CSS (2-day) -- Girl Develop It San Francisco -- -->
-          <a rel="license" href="../common/http://creativecommons.org/licenses/by-nc/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="http://i.creativecommons.org/l/by-nc/3.0/80x15.png" /></a>
+          <a rel="license" href="../common/http://creativecommons.org/licenses/by-nc/3.0/deed.en_US"><img alt="Creative Commons License" style="border-width:0" src="https://licensebuttons.net/l/by-nc/3.0/80x15.png" /></a>
         </div>
       </footer>
     </div><!-- Close reveal -->
