Updates to TA, Survey slides

--- a/html-css-intro/htmlcss_one-day/class.html
+++ b/html-css-intro/htmlcss_one-day/class.html
@@ -68,11 +68,11 @@
         <section>
           <h3>Introductions!</h3><br>
           <div class = "left-align">
-            <p style="font-size: 45px; text-align: center;">LaMaia Cramer
+            <p style="font-size: 45px; text-align: center;">LaMaia Cramer, Fulll Stack Developer
             </p><br>
-            <p style="font-size: 45px; text-align: center;">Morgan Jones 
+            <p style="font-size: 45px; text-align: center;">Morgan Jones, Web Developer 
             </p><br>
-            <p style="font-size: 45px; text-align: center;">Shu Rong "Serene" Hwang</p>
+            <p style="font-size: 45px; text-align: center;">Shu Rong "Serene" Hwang, Developer</p>
           </div>
         </section>
 
@@ -81,7 +81,7 @@
           <div class = "left-align">
           <ul>
             <li>Name?</li><br>
-            <li>"Zooming" from?</li><br>
+            <li>Attending from?</li><br>
           </ul>
           </div>
         </section>
@@ -127,7 +127,7 @@
             <li>Display your preferred name and pronoun.</li><br>
             <li>We are here for you!</li><br>
             <li>Every question is important.</li><br>
-            <li>Participate, Experiment, Have fun!</li><br>
+            <li>Participate, Experiment, Have Fun!</li><br>
           </ul>
           </div>
         </section>
@@ -145,12 +145,10 @@
         </section>
 
         <section>
-          <h3>Stretch - "Bio" Breaks</h3><br>
+          <h3>Stretch - "Bio" Break</h3><br>
           <div class = "left-align">
           <ul>
-            <li>10min @ 7:15p EST / 6:15p CST / 4:15p PST</li><br><br>
-
-            <li>5 min @ 8:15p EST / 7:15p CST / 5:15p PST</li><br>
+            <li>10min @ 7:30p EST / 6:30p CST / 4:30p PST</li><br><br>
           </ul>
           </div>
         </section>
@@ -1027,7 +1025,7 @@ font-family: "Arial", sans-serif; /* Comma-separated list */
 
 <section>
   <h3>Give Us Your Feedback</h3>
-  <p>Survey link...</p>
+  <p><a href="https://forms.gle/EU82SVF3tiThQGSU8" target="blank">https://forms.gle/EU82SVF3tiThQGSU8</a></p>
 </section>
 
 <section>
@@ -1035,30 +1033,34 @@ font-family: "Arial", sans-serif; /* Comma-separated list */
 </section>
 
 <section>
-  <h3>GDI Resources</h3>
-  <p>Upcoming GIRL DEVELOP IT classes:</p><br>
-  <p>Intro to JavaScript</p>
-  <p>Front End Dev Cohort</p>
-  <p>JavaScript Cohort</p>
+  <h3>Upcoming GDI classes</h3>
+  <p>Intro to JavaScript</p><br>
+  <p>FrontEnd Cohort</p><br>
+  <p>JavaScript Cohort</p><br>
+  <p>Intro to Git</p><br>
+  <p>CSS Frameworks: Bootstrap</p><br>
   <p>CSS Flexbox</p><br>
 
+  
+</section>
+
+<section>
   <h3>External Resources</h3>
-  <p>Free Code Camp</p>
-  <p>Codecademy</p>
-  <p>Udemy (Colt Steele, Brad Traversy)</p><br>
+  <p>Free Code Camp</p><br>
+  <p>Codecademy</p><br>
+  <p>Udemy</p><br>
 </section>
 
 <section>
   <h3>Contact</h3>
-  <p>Tinuola Awopetu</p>
-  (<a href="https://www.linkedin.com/in/tinuolaawopetu/" target="_blank">LinkedIn</a>, <a href="https://github.com/tinuola">github.com/tinuola</a>)
-  <br><br>
-  <p>LaMaia Cramer</p><br><br>
-  <p>Morgan Jones</p><br><br>
+  <p>Tinuola Awopetu, <a href="https://www.linkedin.com/in/tinuolaawopetu/" target="_blank">LinkedIn</a></p>
+  <br>
+  <p>LaMaia Cramer</p><br>
+  <p>Morgan Jones, <a href="https://github.com/MorganEJLA">Github: @MorganEJLA</a></p><br>
   <p>Shu Rong "Serene" Hwang</p>
 </section>
 
-      </div><!-- Close slides -->
+</div><!-- Close slides -->
 
       <footer>
         <div class="copyright">
