Updates JavaScript class one and two slides

--- a/html-css-intro/htmlcss_one-day/class.html
+++ b/html-css-intro/htmlcss_one-day/class.html
@@ -1008,6 +1008,15 @@ font-family: "Arial", sans-serif; /* Comma-separated list */
     <li>Change the font-size of your h1 element. Use the px unit</li><br>
     <li>Change the font-size of other elements on your page (headings or paragraphs)</li><br>
     <li>Give your headings and/or paragraphs a different font type</li>
+  </ol>
+</section>
+
+<!-- PRACTICE-->
+<section>
+  <h3>Let's develop it: Extra Tips</h3><br>
+  <p>Centering your entire page</p><br>
+  <p>Sizing your images</p><br>
+  <p>Checking for responsiveness (Using Dev Tools)</p><br>
 </section>
 
 <!-- Final slides-->
