--- a/js-intro/class2.html
+++ b/js-intro/class2.html
@@ -387,7 +387,7 @@ if (age &gt; 18) {
                 <th>Result</th>
               </tr>
             </thead>
-            <tbody>
+            <tbody style="font-size:24px">
               <tr>
                 <td><code>a == b</code></td>
                 <td>Equal</td>
@@ -686,6 +686,11 @@ if (age &gt;=30 &amp;&amp; yearsAsCitizen &gt; 9) {
         <p>We're going to practice manipulating the DOM.</p>
       </section>
 
+      <section>
+        <h3>Dragon Defeater</h3><br>
+        <p>Our First JavaScript Web Application!</p>
+      </section>
+
         <!-- Final slides-->
         <section>
           <h3>You did it!</h3>
@@ -696,15 +701,25 @@ if (age &gt;=30 &amp;&amp; yearsAsCitizen &gt; 9) {
         </section>
 
         <section>
-          <h3>GDI Resources</h3>
-          <p>Front End Development Cohort</p>
-          <p>JavaScript Cohort</p>
-          <p>React Cohort</p>
-          <br>
-          <h3>Other Resources</h3>
+          <h3>Give Us Your Feedback</h3>
+          <p><a href="https://forms.gle/EU82SVF3tiThQGSU8" target="blank">https://forms.gle/EU82SVF3tiThQGSU8</a></p>
+        </section>
+
+        <section>
+          <h3>Upcoming GDI classes</h3>
+          <p>FrontEnd Fundamentals I Cohort</p><br>
+          <p>JavaScript Cohort</p><br>
+          <p>Python I Cohort</p><br>
+          <p>Intro to Git</p><br>
+          <p>CSS Frameworks: Bootstrap</p><br>
+          <p>CSS Flexbox</p>
+        </section>
+
+        <section>
+          <h3>External Resources</h3>
             <ul>
               <li><a href="https://developer.mozilla.org/en-US/docs/Web/JavaScript/Guide" target="_blank">JavaScript Guide</a>, from the Mozilla Developers Network.</li>
-              <li><a href="http://www.codecademy.com/tracks/javascript" target="_blank">Code Academy</a>, with interactive JavaScript lessons to help you review.</li>
+              <li><a href="http://www.codecademy.com/tracks/javascript" target="_blank">Codecademy</a>, with interactive JavaScript lessons to help you review.</li>
               <li>Codecademy</li>
               <li>Free Code Camp</li>
               <li>Udemy courses</li>
@@ -713,13 +728,15 @@ if (age &gt;=30 &amp;&amp; yearsAsCitizen &gt; 9) {
 
         <!-- Q & A / CONTACT -->
         <section>
-          <h2>Q & A</h2><br><br>
           <h3>Contact</h3>
-          <p>Tinuola Awopetu</p>
-          <a href="https://www.linkedin.com/in/tinuolaawopetu/" target="_blank">LinkedIn</a><br> 
-          <a href="https://github.com/tinuola">github.com/tinuola</a>
+          <p>Tinuola Awopetu, <a href="https://www.linkedin.com/in/tinuolaawopetu/" target="_blank">LinkedIn</a></p>
+          <br>
+          <p>Anne Katzeff</p><br>
+          <p>Ebony Rawlinson</p><br>
+          <p>Santhi Sri Jarnisetty</p>
         </section>
-      </div>
+
+      </div> <!-- Close slides -->
 
       <footer>
         <div class="copyright">
